# GPTN

./: .gitignore  CMakeLists.txt  README.md  main.cpp
resources/: resources.qrc
resources/styles/: style.qss
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs
rust/src/core/: mod.rs
rust/src/ffi/: connection.rs  matrix.rs  mod.rs  net.rs  vec.rs  vertex.rs
rust/src/net/: connection.rs  mod.rs  vertex.rs
src/: mainwindow.cpp  mainwindow.h  matrix_model.cpp  matrix_model.h  named_matrix_model.h  split_list_model.h
src/ActionTabWidget/: ActionTabWidget.cpp  ActionTabWidget.h  DecomposeModelTab.cpp  DecomposeModelTab.h  NetModelingTab.cpp  NetModelingTab.h  WrappedLayoutWidget.cpp  WrappedLayoutWidget.h
src/DockSystem/: DockToolbar.cpp  DockToolbar.h  DockWidget.cpp  DockWidget.h  SplittableComponentsFactory.cpp  SplittableComponentsFactory.h
src/elements/: arrow_line.cpp  arrow_line.h  petri_object.cpp  petri_object.h  position.cpp  position.h  transition.cpp  transition.h
src/ffi/: rust.cpp  rust.h
src/graphviz/: graphviz_wrapper.cpp  graphviz_wrapper.h
src/overrides/: MatrixWindow.cpp  MatrixWindow.h  switch.cpp  switch.h
src/synthesis/: synthesis_item_delegate.cpp  synthesis_item_delegate.h  synthesis_model.cpp  synthesis_model.h  synthesis_table.cpp  synthesis_table.h
src/toolbox/: tool.h  toolbox.h
src/view/: graphic_scene.cpp  graphic_scene.h  graphics_view.cpp  graphics_view.h  graphics_view_zoom.cpp  graphics_view_zoom.h
src/windows_types/: close_on_inactive.cpp  close_on_inactive.h
